feat: add eigen-value-vector notes

--- a/math/latex/template.tex
+++ b/math/latex/template.tex
@@ -6,7 +6,7 @@
 \usepackage{hyperref}       % 目录超链接
 \usepackage{geometry}       % 页面布局
 \usepackage{bm}             % 粗体
-\usepackage{xcolor}         % 颜色
+\usepackage[table]{xcolor}  % 颜色
 \usepackage{tabularx}       % 表格环境
 \usepackage{tikz}           % TikZ 绘制主对角线斜线
 \usepackage{tcolorbox}
