update: write 41 deirctions

--- a/english/write/041-060_essay.md
+++ b/english/write/041-060_essay.md
@@ -1,5 +1,18 @@
 ## 041
 
+### Directions
+
+Directions:
+
+In this section, you are asked to write an essay based on the following chart. In your writing,you should
+
+1. interpret the chart and
+2. give your comments.
+
+![Chart](./assets/41.jpg)
+
+### Example
+
 &emsp;&emsp;From the information given in the above column chart, we can see a striking contrast between developing and
 developed countries in mobile-phone subscriptions from 2000 to 2008. During this period, there has been a dramatic
 increase from 0.4 to 4 billion mobile-phone subscriptions in developing countries, while those of developed countries
@@ -13,6 +26,13 @@ enlargement tends to saturate.<br>
 &emsp;&emsp;Although the fact remains that phones are already extremely prevalent in both developing and developed
 countries, the growing gap will continue to widen in the future. Therefore, mobile phone manufacturers should pay more
 attention to the market in developing countries.<br>
+
+### 译文
+
+根据上面的柱状图提供的信息，我们可以看出，从2000年到2008年，发展中国家和发达国家在手机入网方面存在着惊人的对比。在此期间，发展中国家手机入网数从4亿急速增长到
+40 亿，而发达国家的相关数据在10亿之下保持平稳。<br>
+至少有两点主要原因造成了这种现象。一方面，随着发展中国家的经济快速增长这些国家的电信产业大幅扩张以满足全球化的需求。因此，使用手机来缩短人与人之间的距离并与全世界联系的人数以惊人的速度增长。另一方面，发达国家高度发达的经济意味着它们在诸多领域发展潜力较小，他们对进一步开发的需求趋于饱和。<br>
+尽管手机在发展中国家和发达国家已经非常普遍，但这一差距在未来还会继续扩大。因此，手机制造商应该更加关注发展中国家的市场。
 
 ## 042
 
@@ -34,6 +54,7 @@ attention to the welfare of their staff.<br>
 ### Directions
 
 Write an essay based on the chart. In your essay, you should
+
 1. describe and interpret the chart, and
 2. give your comments.
 
@@ -44,26 +65,26 @@ Write an essay based on the chart. In your essay, you should
 &emsp;&emsp;The column chart above clearly illustrates the operation mileage of high-speed railway in China between 2016
 and 2023. According to the diagram, between 2016 and 2017, the operating railway lines increased slightly from 22000
 kilometers to 25000 kilometers, a rise of merely 3000 kilometers. By contrast, it jumped markedly from 25000 kilometers
-to 45000 kilometers between 2017 and 2023, an increase of 20000 kilometers within six years.
+to 45000 kilometers between 2017 and 2023, an increase of 20000 kilometers within six years.<br>
 &emsp;&emsp;The high-speed rail has significantly changed the lives of Chinese people. To begin with, it has driven the
-development of short-term tourism and economic prosperity. In addition, it allows passengers to shuttle between various 
+development of short-term tourism and economic prosperity. In addition, it allows passengers to shuttle between various
 major cities in China in one day. Last but not least, it enables people to pursue job opportunities across different
-provinces.
+provinces.<br>
 &emsp;&emsp;Given all the arguments above, we may come to the conclusion that with the speedy development of economy,
 the mileage of high-speed railway in China will keep growing in the forthcoming decade.
 
 ### 译文
 
-&emsp;&emsp;上面的柱状图清晰地展示了
-2016年至2023年间中国高铁的运营里程情况。根据该图表，从2016年至2017年，运营里程从2.2万公里小幅增长至2.5万公里，只增长了3千公里。相比之下，从2017年到2023年，运营里程从2.5万公里大幅增加至4.5万公里，在六年的时间内增长了2万公里。
-&emsp;&emsp;高铁极大地改变了中国人的生活。首先，它带动了短期旅游的发展,从而促进了经济繁荣。其次，它可以让旅客在一天内在中国多个大城市间穿梭。最后但同样重要的是，它使人们能够在不同省份之间寻找工作机会。
-&emsp;&emsp;鉴于上述所有论点，我们可以得出结论:随着经济的迅猛发展，中国高铁里程在未来十年将继续增长。 
+&emsp;&emsp;上面的柱状图清晰地展示了2016年至2023年间中国高铁的运营里程情况。根据该图表，从2016年至2017年，运营里程从2.2万公里小幅增长至2.5万公里，只增长了3千公里。相比之下，从2017年到2023年，运营里程从2.5万公里大幅增加至4.5万公里，在六年的时间内增长了2万公里。<br>
+&emsp;&emsp;高铁极大地改变了中国人的生活。首先，它带动了短期旅游的发展,从而促进了经济繁荣。其次，它可以让旅客在一天内在中国多个大城市间穿梭。最后但同样重要的是，它使人们能够在不同省份之间寻找工作机会。<br>
+&emsp;&emsp;鉴于上述所有论点，我们可以得出结论:随着经济的迅猛发展，中国高铁里程在未来十年将继续增长。
 
 ## 052
 
 ### Directions
 
 Write an essay on the chart. In your essay, you should
+
 1. describe and interpret the chart, and
 2. give your comments.
 
@@ -71,13 +92,22 @@ Write an essay on the chart. In your essay, you should
 
 ### Example
 
-&emsp;&emsp;What is shown in the chart above indicates that by the end of 2023, the ownership of New Energy Vehicles(NEVs) in China reached 20.41 million. In the meantime, the newly registered NEVs throughout the year in China got to 7.43 million.<br>
-&emsp;&emsp;Why are NEVs booming nowadays? Several factors bring about this phenomenon. To begin with, the promotion of NEVs is an effective practice to ease impending energy shortages. It is universally acknowledged that we are likely to face a global energy shortage over the next few decades. More importantly, one significant benefit of developing NEVs is that can help to curb the problem of air pollution and thus promote a cleaner and greener environment. Last but not least, the NEV industry is regarded as a backbone, or key industry, acting as an engine of and supporting many subsidiary industries, such as steel, machinery, glass, rubber, tires, paints, and so on<br>
-&emsp;&emsp;Generally speaking, NEVs are an irresistible historical trend and a fashion, which we should embrace without hesitation.
+&emsp;&emsp;What is shown in the chart above indicates that by the end of 2023, the ownership of New Energy Vehicles(
+NEVs) in China reached 20.41 million. In the meantime, the newly registered NEVs throughout the year in China got to
+7.43 million.<br>
+&emsp;&emsp;Why are NEVs booming nowadays? Several factors bring about this phenomenon. To begin with, the promotion of
+NEVs is an effective practice to ease impending energy shortages. It is universally acknowledged that we are likely to
+face a global energy shortage over the next few decades. More importantly, one significant benefit of developing NEVs is
+that can help to curb the problem of air pollution and thus promote a cleaner and greener environment. Last but not
+least, the NEV industry is regarded as a backbone, or key industry, acting as an engine of and supporting many
+subsidiary industries, such as steel, machinery, glass, rubber, tires, paints, and so on<br>
+&emsp;&emsp;Generally speaking, NEVs are an irresistible historical trend and a fashion, which we should embrace without
+hesitation.
 
 ### 译文
 
-&emsp;&emsp;上面的图表显示，到 2023年底，我国新能源汽车保有量达到了2041万辆。与此同时全年新登记注册的新能源汽车达 743 万辆。<br>
+&emsp;&emsp;上面的图表显示，到 2023年底，我国新能源汽车保有量达到了2041万辆。与此同时全年新登记注册的新能源汽车达 743
+万辆。<br>
 &emsp;&emsp;为什么如今新能源汽车发展如此迅猛?一些因素造成了这一现象。首先，推广新能源汽车是缓解迫在眉睫的能源短缺问题的一个有效做法。众所周知，未来几十年，我们很可能会面临世界能源短缺问题。更重要的是，发展新能源汽车的一个重大好处就是它们有助于遏制空气污染问题，从而促进形成更加清洁、环保的环境。最后但同样重要的是，新能源汽车产业被视为一大支柱产业或关键产业，带动并支持着钢铁、机械、玻璃、橡胶、轮胎、涂料等许多辅助产业的发展。<br>
 &emsp;&emsp;总之，新能源汽车是不可阻挡的历史潮流，是一种时尚，我们应该毫不犹豫地接受它。<br>
 
@@ -86,6 +116,7 @@ Write an essay on the chart. In your essay, you should
 ### Directions
 
 Write an essay on the chart. In your essay, you should
+
 1. describe and interpret the chart, and
 2. give your comments.
 
@@ -93,22 +124,31 @@ Write an essay on the chart. In your essay, you should
 
 ### Example
 
-&emsp;&emsp;The pie chart above clearly reveals the results of a survey on the average times of consumers' ordering takeaway per month in China in 2021. According to the data, the percentage of ordering takeaway from one to five times is the largest among the five groups, accounting for 35.2%; the percentage of ordering takeaway from six to ten times is 27%. In contrast, the percentage of never ordering takeaway merely takes up 18.5%.<br>
-&emsp;&emsp;Primary factors that result in the phenomenon may be summarized as follows. To begin with, with the quickening pace of urban life and ever-increasing work pressure in recent years, a good many people prefer ordering takeaway to going to a restaurant. In addition, in a bid to enjoy a comfortable life, instead of cooking by themselves, consumers in mounting numbers are willing to order takeaway in companies or at home. Lastly, the prosperous takeaway industry can be ascribed to the speedy development of online shopping and express delivery business.<br>
-&emsp;&emsp;Briefly speaking, the booming takeaway industry undoubtedly contributes to the prosperity of the economy.<br>
+&emsp;&emsp;The pie chart above clearly reveals the results of a survey on the average times of consumers' ordering
+takeaway per month in China in 2021. According to the data, the percentage of ordering takeaway from one to five times
+is the largest among the five groups, accounting for 35.2%; the percentage of ordering takeaway from six to ten times is
+27%. In contrast, the percentage of never ordering takeaway merely takes up 18.5%.<br>
+&emsp;&emsp;Primary factors that result in the phenomenon may be summarized as follows. To begin with, with the
+quickening pace of urban life and ever-increasing work pressure in recent years, a good many people prefer ordering
+takeaway to going to a restaurant. In addition, in a bid to enjoy a comfortable life, instead of cooking by themselves,
+consumers in mounting numbers are willing to order takeaway in companies or at home. Lastly, the prosperous takeaway
+industry can be ascribed to the speedy development of online shopping and express delivery business.<br>
+&emsp;&emsp;Briefly speaking, the booming takeaway industry undoubtedly contributes to the prosperity of the
+economy.<br>
 
 ### 译文
 
-以上饼状图清楚地显示了2021年中国消费者月均点外卖次数的调研结果。根据数据，在这五组中，点外卖1-5次的人数在这五组中占比最大，占35.2%;点外卖6-10次的人数占比为 27%。相比之下，从来不点外卖的人仅占18.5%。<br>
+以上饼状图清楚地显示了2021年中国消费者月均点外卖次数的调研结果。根据数据，在这五组中，点外卖1-5次的人数在这五组中占比最大，占35.2%;点外卖6-10次的人数占比为
+27%。相比之下，从来不点外卖的人仅占18.5%。<br>
 造成上述现象的主要原因如下。首先，随着近年来都市生活节奏的加快以及工作压力的不断增加，比起去餐馆，很多人更喜欢点外卖。其次，为了享受舒适的生活，越来越多的消费者喜欢在公司或家里点外卖，而不是自己做饭。最后，繁荣的外卖行业应该归功于网上购物和快递产业的迅猛发展。<br>
 简言之，快速发展的外卖行业无疑有助于经济的繁荣。<br>
-
 
 ## 054
 
 ### Directions
 
 Write an essay on the chart. In your essay, you should
+
 1. describe and interpret the chart, and
 2. give your comments.
 
@@ -116,12 +156,22 @@ Write an essay on the chart. In your essay, you should
 
 ### Example
 
-&emsp;&emsp;The diagram above clearly reflects that China has made tremendous achievements in poverty alleviation from 2012 to 2020. During this period, China's impoverished rural population decreased considerably from nearly 100 million to nearly zero, a decline of 100 million. At the same time, the poverty headcount ratio also fell from approximately 10% to almost 0%.<br>
-&emsp;&emsp;Several primary factors for the above-mentioned changes can be summarized as follows. To begin with, the relevant authorities in China have adopted a combination of conventional and innovative approaches to improve rural education and healthcare. What is more, China has put great emphasis on the establishment of infrastructure in poor rural areas, which has effectively bridged the gap between the rich and the poor. Last but not least, these achievements can be attributed to China's speedy economic development during the past several decades.<br>
-&emsp;&emsp;In short, China's poverty alleviation campaign is vital both nationally and internationally. To start with, anti-poverty achievements have allowed more people to enjoy the advantages of China's economic boom. What is more, the Chinese government has fulfilled its promise of lifting all its citizens out of poverty.<br>
+&emsp;&emsp;The diagram above clearly reflects that China has made tremendous achievements in poverty alleviation from
+2012 to 2020. During this period, China's impoverished rural population decreased considerably from nearly 100 million
+to nearly zero, a decline of 100 million. At the same time, the poverty headcount ratio also fell from approximately 10%
+to almost 0%.<br>
+&emsp;&emsp;Several primary factors for the above-mentioned changes can be summarized as follows. To begin with, the
+relevant authorities in China have adopted a combination of conventional and innovative approaches to improve rural
+education and healthcare. What is more, China has put great emphasis on the establishment of infrastructure in poor
+rural areas, which has effectively bridged the gap between the rich and the poor. Last but not least, these achievements
+can be attributed to China's speedy economic development during the past several decades.<br>
+&emsp;&emsp;In short, China's poverty alleviation campaign is vital both nationally and internationally. To start with,
+anti-poverty achievements have allowed more people to enjoy the advantages of China's economic boom. What is more, the
+Chinese government has fulfilled its promise of lifting all its citizens out of poverty.<br>
 
 ### 译文
 
-上面的图表清楚地揭示了2012年到2020年间中国在扶贫方面取得的巨大成就。在此期间中国的农村贫困人口数量从大约1亿大幅减少到几乎为零，减少了近1亿。与此同时，农村的贫困人口比例从大约 10%下降到几乎为零。<br>
+上面的图表清楚地揭示了2012年到2020年间中国在扶贫方面取得的巨大成就。在此期间中国的农村贫困人口数量从大约1亿大幅减少到几乎为零，减少了近1亿。与此同时，农村的贫困人口比例从大约
+10%下降到几乎为零。<br>
 促成上述变化的主要因素可以概括如下。首先，中国相关部门结合传统方法和创新方法，帮助改善了农村地区的教育和医疗水平。其次，中国非常重视农村贫困地区的基础设施建设，有效缩小了贫富差距。最后但同样重要的是,这一成就可以归功于过去几十年中国经济的快速发展。<br>
 总之，中国的扶贫战役对本国和世界都极为重要。首先，反贫困的成就让更多的人享受到中国经济繁荣的好处。更重要的是，中国政府已经实现了全民脱贫的承诺。<br>
